Fix video-boxes bug, change content sizes on mobile version

--- a/styles.css
+++ b/styles.css
@@ -165,26 +165,15 @@ span {       /* Brand on the bottom */
   margin-top: 4rem;
 }
 
-.content-video {
-  display: block;
-  margin: auto;
-  height: 600;
-  width: 400;
-}
-
-.pull-vid {
-  margin-top: 6rem;
-}
-
-/* .rm-margin-bot {
-  margin-bottom: 0;
-} */
-
-.content-photo {
+.content-box {
   display: block;
   margin: auto;
   height: 630px;
   width: 420px;
+}
+
+.pull-vid {
+  margin-top: 6rem;
 }
 
 .set-proper-size {
@@ -316,30 +305,25 @@ span {       /* Brand on the bottom */
                                         /*  */
                                         /* Work Section */
 
-   #work .infobox {
-   padding: 70px 0;
+   #work.infobox {
+   padding-left: 0;
+   padding-right: 0;
    width: 100%;
-  }
-
-  #work h3 {
-    font-size: 3.75rem;
-    font-weight: 700;
   }
 
   .content-cell {
     margin-top: 8rem;
   }
 
-  .content-photo {
-    height: 975px;
-    width: 650px;
+  .content-box {
+    height: 1350px;
+    width: 900px;
   }
 
-  /* Testing green frame changes on mobile */
-  /* .content-video {
-    height: 975px;
-    width: 650px;
-  } */
+  #work h3 {
+    font-size: 3.75rem;
+    font-weight: 700;
+  }
 
                                             /*  */
                                             /* Header */
